--- a/src/index.scss
+++ b/src/index.scss
@@ -22,3 +22,11 @@ a{
   color: white;
   text-decoration: none;
 }
+
+.secondaryText {
+  color: rgb(80, 82, 84)
+}
+.cardItemDeleteIcon{
+  margin-left: 5px;
+  cursor: pointer;
+}
